# mongo_repo

./: Cargo.toml  README.md  run.sh
src/: lib.rs
src/api/: context.rs  mod.rs  server.rs
src/api/schema/: items.rs  locations.rs  mod.rs
src/common/: entity.rs  id.rs  mod.rs  name.rs
src/domain/: mod.rs
src/domain/models/: items.rs
src/items/: item.rs  item_repo.rs  items_repo.rs  mod.rs
src/storage/: mod.rs  mongo_repo.rs  repo.rs  repository.rs
