[package]
name = "mongo_repo"
version = "0.1.0"
authors = ["Aja Walker <aja@ajawalker.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
mongodb = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.17.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
