[package]
name = "mongo_repo"
version = "0.1.0"
authors = ["Aja Walker <aja@ajawalker.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
ensure-config-rust-client = { git = "ssh://git@github.com/SilversphereInc/ensure-config-rust-client.git", tag = "1.7.0" }
futures = "0.3.21"
http = "0.2.3"
hyper = { version = "0.14.17", features = ["server", "http1", "http2", "tcp"] }
juniper = "0.15.9"
juniper_hyper = "0.8.0"
mongodb = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.17.0"
tokio-compat-02 = "0.2.0"
